--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <resources>
     <string name="app_name">AndroidXingYi</string>
     <string name="action_settings">Settings</string>
+    <string name="at_no_network">无网络</string>
+    <string name="at_click_wifi_load">点击重新加载</string>
+    <string name="at_click_no_data_load">点击页面 进入搜索页</string>
+    <string name="at_connect_sever_time_out">连接服务器超时,请重试</string>
+    <string name="at_no_failed_data">没有找到相关信息,请重新查询</string>
+    <string name="at_server_error_first_text">抱歉!系统异常中</string>
+    <string name="at_server_error_second_text">攻城狮正在处理,请稍后重试</string>
+    <string name="at_complete">完成</string>
+    <string name="desc_back">返回键</string>
+    <string name="desc_right_icon">右标题图标</string>
+    <string name="desc_line">标题分割线</string>
+
 </resources>
